--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/Kuraigus/teste_conhecimentos_simp#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.0",
+    "mongoose": "^5.13.5",
     "nodemon": "^2.0.12"
   }
 }
