--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Kuraigus/teste_conhecimentos_simp#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
