--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.12",
-    "streamifier": "^0.1.1"
+    "nodemon": "^2.0.12"
   }
 }
